@@ -41,7 +41,7 @@ ltn-dispatcher-delivery-timeout=Lieferzeit in Sekunden bevor Züge als vermisst 
 ltn-dispatcher-requester-delivery-reset=Inaktiv (Standardwert):\nLieferung und Fahrplan werden bei Ankunft im Depot zurück gesetzt.\nÄnderungen an Zügen in Anforderer-Haltestellen haben keine Auswirkung.\n\nAktiv:\nLieferung und Fahrplan werden bei verlassen der Anforderer-Haltestelle zurück gesetzt.\nÄnderungen an Zügen in Anforderer-Haltestellen löscht die Lieferung und setzt den Fahrplan zurück.
 ltn-dispatcher-finish-loading=Aktiv (Standardwert):\nVerhindert verlassen von Haltestellen während Greifarme/Pumpen arbeiten.\n\nInaktiv:\nZüge verlassen Haltestellen unmittelbar nach erreichen ihrer gewünschten Beladung.\nGreifarme bleiben Gegenstände haltend stecken, Tankwaggons enthalten Restmengen.
 ltn-depot-reset-filters=Aktiv (Standardwert):\nFilter und Stapelbegrenzungen in Güterwaggons werden bei Ankunft im Depot gelöscht.
-ltn-depot-fluid-cleaning=Maximale Flüssigkeitsmenge pro Waggon die bei Ankunft im Depot automatisch zerstört wird.\n0 schaltet diese Funktion aus.
+ltn-depot-fluid-cleaning=Maximale Flüssigkeitsmenge pro Waggon die bei Ankunft im Depot automatisch zerstört wird.\n0 schaltet diese Funktion aus, -1 entfernt alle Flüssigkeiten.
 ltn-stop-default-network=Netzwerk ID wenn kein Signal "Kodierte Netzwerk ID" existiert.
 ltn-provider-show-existing-cargo=Aktiv (Standardwert):\nExistierende Ladung von Zügen bei Ankunft am Anbieter wird im Haltestellen Signalausgang gezeigt.\nBeinhaltet Gegenstände die Greifarme auf die Gleise halten.
 ltn-provider-ignore-stopped-train=Aktiv (Standardwert):\nAn der Station haltende Züge werden ignoriert wenn eine neue Lieferung generiert wird.
