@@ -40,7 +40,7 @@ ltn-dispatcher-delivery-timeout=Duration in seconds deliveries can take before a
 ltn-dispatcher-requester-delivery-reset=False (default):\nDelivery and schedule are reset when train arrives at depot.\nChanges to trains parked at requesting stops have no effect.\n\nTrue:\nDelivery and schedule are reset when train leaves requester.\nChanges to trains parked at requesting stops will remove delivery and reset schedule.
 ltn-dispatcher-finish-loading=True (default):\nPrevents trains from leaving while inserters/pumps are working by adding 2s inactivity condition.\n\nFalse:\nTrains will leave immediately when all items have been loaded.\nInserters at loading stations will get stuck.
 ltn-depot-reset-filters=True (default):\nCargo wagons have their filters and stack limitations cleared when entering a depot.
-ltn-depot-fluid-cleaning=Maximum amount of fluid per wagon automatically destroyed when entering depots.\nSet to 0 to disable.
+ltn-depot-fluid-cleaning=Maximum amount of fluid per wagon automatically destroyed when entering depots.\nSet to 0 to disable or -1 to remove everything.
 ltn-stop-default-network=Network ID used for stops without "Encoded Network ID" signal.
 ltn-provider-show-existing-cargo=True(default):\nCargo inside train when arriving at provider is shown in LTN Output.\nIncludes items from inserters holding items on tracks.
 ltn-provider-ignore-stopped-train=True (default):\nIgnore a stopped train at the requester stop when calculating shipment to the requester.
